# ohmyvoice

./: .gitignore  Makefile  README.md  install-linux.sh  install-macos.sh  ohmyvoice.spec  package-lock.json  package.json  pyproject.toml
assets/: icon.icns
contrib/macos/: SETUP.md  install.sh
docs/superpowers/plans/: 2026-03-20-asr-worker-process.md  2026-03-20-ohmyvoice-implementation.md  2026-03-20-packaging-distribution.md  2026-03-20-settings-ui-implementation.md
docs/superpowers/specs/: 2026-03-20-ohmyvoice-design.md  2026-03-20-packaging-design.md  2026-03-20-settings-ui-design.md
scripts/: build_dmg.sh
src/: backend-manager.test.ts  backend-manager.ts  config.test.ts  config.ts  service.ts  system.test.ts  system.ts  transcribe.test.ts  transcribe.ts
src/ohmyvoice/: __init__.py  __main__.py  app.py  asr.py  audio_feedback.py  autostart.py  history.py  hotkey.py  paths.py  preferences.py  recorder.py  settings.py  ui_bridge.py  worker.py  worker_manager.py
tests/: test_asr.py  test_autostart.py  test_paths.py  test_preferences.py  test_recorder.py  test_settings.py  test_ui_bridge.py  test_worker.py  test_worker_manager.py
